prevent flicker of menu_closer in jquery.mmenulight.css for tpl_modified_nova
git-svn-id: https://svn.modified-shop.org/svn/modified-shop/trunk@15714 79ac0487-9261-4f26-a34d-858dee0dcce0

--- a/templates/tpl_modified_nova/css/jquery.mmenulight.css
+++ b/templates/tpl_modified_nova/css/jquery.mmenulight.css
@@ -11,17 +11,16 @@
 
 #mobile_menu {
   display:block;
-} 
- 
+}
+
 #menu_closer {
   cursor:pointer;
   width:30px;
   height:30px;
   background: var(--toggle_menu_closer_bg, #eee);
   color: var(--toggle_menu_closer_color, #555);
-  position:absolute;
-  top:0px;
-  right:0px;
+  position:relative;
+  margin-left:auto;
   font-size:20px;
   line-height:30px;
   text-align:center;
